[tool.poetry]
name = "bank-compare"
version = "0.1.0"
description = "Simple desktop application to compare the discrepancies between two excel sheets thereby checkmating salary theft or fraud"
authors = ["Thoth <thoth2357@gmail.com>"]
readme = "README.md"
packages = [{include = "bank_compare"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
PySide6 = "^6.5.1.1"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
pyinstaller = "^5.13.0"
auto-py-to-exe = "^2.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
