[tool.poetry]
name = "bank-compare"
version = "0.1.0"
description = "Simple desktop application to compare the discrepancies between two excel sheets thereby checkmating salary theft or fraud"
authors = ["Thoth <thoth2357@gmail.com>"]
readme = "README.md"
packages = [{include = "bank_compare"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
PySide6 = "^6.5.1.1"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
pyinstaller = "^5.13.0"
auto-py-to-exe = "^2.36.0"
fpdf = "^1.7.2"
bs4 = "^0.0.2"
psycopg2-binary = "^2.9.9"
argon2-cffi = "^23.1.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
